--- a/jobclient/app/src/main/res/layout/details_activity_listview.xml
+++ b/jobclient/app/src/main/res/layout/details_activity_listview.xml
@@ -3,7 +3,7 @@
     xmlns:wheel="http://schemas.android.com/tools"
     android:id="@+id/main_content_details"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:background="#ffffff"
     android:orientation="vertical">
 
@@ -26,14 +26,14 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/recyclerView_details"
+        <ListView
+            android:id="@+id/listView_details"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:divider="#00000000"
             android:dividerHeight="18dp"
             android:padding="15dp"
-            android:scrollbars="vertical"></android.support.v7.widget.RecyclerView>
+            android:scrollbars="vertical"></ListView>
 
         <com.pnikosis.materialishprogress.ProgressWheel
             android:id="@+id/progress_wheel"
