--- a/jobclient/app/src/main/res/layout/details_text.xml
+++ b/jobclient/app/src/main/res/layout/details_text.xml
@@ -4,6 +4,6 @@
     android:layout_height="wrap_content"
     android:id="@+id/text"
     android:lineSpacingMultiplier="1.5"
-    android:textColor="@color/secondary_text_default_material_light"
+    android:textColor="@color/black_sina"
     android:textSize="17sp">
 </TextView>
