--- a/jobclient/app/src/main/res/values/colors.xml
+++ b/jobclient/app/src/main/res/values/colors.xml
@@ -4,6 +4,7 @@
     <color name="transparent_background">#50000000</color>
 
     <color name="red">#FF6347</color>
+    <color name="white">#ffffff</color>
     <color name="dark_red">#F4511E</color>
     <color name="accent_red">#FF5722</color>
     <color name="accent_web">#ff86a8ff</color>
@@ -37,6 +38,7 @@
     <color name="dark_green">#388E3C</color>
     <color name="accent_green">#4CAF50</color>
     <color name="black">#0f0f0f</color>
+    <color name="black_sina">#515151</color>
     <color name="text_color_primary">#212121</color>
     <color name="text_second_color_primary">#727272</color>
 
